# protamine-meowgame

./: .gitignore  project.json
assets/anims/: ball-come.anim  ball-crash.anim  button-start.anim  cross-dissolve.anim  fragments-gain.anim  general-hide.anim  general-show.anim  halo-gain.anim  highest-show.anim  level-up.anim  modal-close.anim  modal-open.anim  scene-open.anim  status-show.anim  to-day.anim  to-night.anim  toast-close.anim  toast-open.anim
assets/prefabs/: background.prefab  ballParticle.prefab  bigStar.prefab  cross.prefab  gameOver.prefab  guide.prefab  halo.prefab  magicStar.prefab  magicStarItem.prefab  magicStarProgress.prefab  magicStarStatus.prefab  pause.prefab  star.prefab  toast.prefab
assets/scenes/: game.fire  home.fire  lab.fire  settings.fire
assets/scripts/: Ball.js  Game.js  GameOver.js  Global.js  GoHome.js  HomeBackground.js  Lab.js  MagicStarItem.js  MagicStarStatuses.js  Pause.js  Settings.js  Springboard.js  Star.js  Toast.js
server/: Cargo.toml  Dockerfile  start.sh
server/src/: main.rs
settings/: builder.json  project.json
